fix: Blog (4-7h) | fix search form | change search input text color | fix "also from this package" section mobile styles | https://markupus.kaiten.io/space/32418/card/2545175

--- a/wp-content/themes/gfx/src/scss/components/form.scss
+++ b/wp-content/themes/gfx/src/scss/components/form.scss
@@ -174,7 +174,7 @@ input {
     font-size: 15px;
     font-weight: 500;
     line-height: 1.314;
-    color: $text-color;
+    color: $white;
 
     @media (max-width: $xs) {
       padding: 0 10px 0 35px;
