--- a/wp-content/themes/gfx/template-parts/blocks/blog_posts_grid/blog-posts-grid.scss
+++ b/wp-content/themes/gfx/template-parts/blocks/blog_posts_grid/blog-posts-grid.scss
@@ -48,12 +48,13 @@
 
   .post-card {
     &:hover {
-      h6 {
-        color: $red;
+      .thumbnail {
+        transform: scale(1.03);
       }
     }
 
     .thumbnail {
+      transition: transform $transition;
       margin-bottom: 10px;
 
       img {
